src/test/ui/in-band-lifetimes/single_use_lifetimes-3.stderr
error: lifetime name `'x` only used once
  --> $DIR/single_use_lifetimes-3.rs:11:12
   |
11 | struct Foo<'x> { //~ ERROR lifetime name `'x` only used once
   |            ^^
   |
note: lint level defined here
  --> $DIR/single_use_lifetimes-3.rs:10:9
   |
10 | #![deny(single_use_lifetime)]
   |         ^^^^^^^^^^^^^^^^^^^

error: lifetime name `'y` only used once
  --> $DIR/single_use_lifetimes-3.rs:16:6
   |
16 | impl<'y> Foo<'y> { //~ ERROR lifetime name `'y` only used once
   |      ^^

error: aborting due to 2 previous errors

